--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^6.13.0",
+    "next": "^15.1.6",
+    "openai": "^4.82.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typewriter-effect": "^2.21.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "10.4.15",
+    "postcss": "^8.5.1",
+    "tailwindcss": "3.3.3"
   }
 }
