--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "bcryptjs": "^2.4.3",
     "mongodb": "^6.13.0",
     "next": "^15.1.6",
