--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^4.1.0",
     "mongodb": "^6.13.0",
     "next": "^15.1.6",
     "openai": "^4.82.0",
